# groundhog

./: Cargo.toml  NOTES.md  README.md
c-example/: test.c
groundhog-apps/: Cargo.toml  cli.rs
groundhog-record/: Cargo.toml  build.rs  groundhog.h
groundhog-record/src/: lib.rs
