[package]
name = "groundhog-record"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "groundhog"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.126"
chrono = "0.4.19"

[build-dependencies]
cbindgen = "0.24.3"
